// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar component Should render Sidebar snapshot correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="sidebar antialiased shadow-box-sidebar bg-gradient-primary dark:bg-none dark:bg-dark-gradient-primary w-[250px] rounded-xl z-50 px-4 py-6 overflow-y-auto overflow-x-hidden fixed top-4 left-4 h-[calc(100vh-2rem)] transition-all ease-in translate-x-[-20rem] xl:translate-x-0 xl:w-[260px] delay-10 duration-300"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row justify-end items-center"
        >
          <div
            class="border p-1 rounded-s-md -mr-4 bg-white cursor-pointer"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 256 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </div>
        </div>
        <a
          href="/analytics"
        >
          <div
            class="tremor-Flex-root flex w-full flex-row items-center justify-normal pl-5 gap-1 pb-2 flex-nowrap relative"
          >
            <img
              alt="Tremor Dashboard PRO"
              data-nimg="1"
              decoding="async"
              height="28"
              loading="lazy"
              src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=64&q=75"
              srcset="/_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=64&q=75 2x"
              style="color: transparent;"
              width="28"
            />
            <h1
              class="text-white text-tremor-default font-semibold flex flex-nowrap false delay-300 duration-500"
            >
              Tremor Dashboard PRO
            </h1>
          </div>
        </a>
        <div
          class="h-px bg-gradient-divider my-4 opacity-25"
        />
        <div
          class="tremor-AccordionList-root rounded-tremor-default shadow-tremor-card dark:shadow-dark-tremor-card bg-transparent shadow-none border-0"
        >
          <div
            class="tremor-Accordion-root overflow-hidden border-tremor-border dark:border-dark-tremor-border rounded-t-tremor-default bg-inherit dark:bg-none dark:bg-dark-gradient-primary border-0 rounded-md"
            data-headlessui-state=""
          >
            <button
              aria-expanded="false"
              class="tremor-AccordionHeader-root w-full flex items-center justify-between px-4 dark:text-dark-tremor-content-emphasis min-w-[210px] text-white py-2 false"
              data-headlessui-state=""
              data-testid="openAccordionBody"
              id="headlessui-disclosure-button-:r0:"
              type="button"
            >
              <div
                class="tremor-AccordionHeader-children flex flex-1 text-inherit mr-4"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-start items-center"
                >
                  <div
                    after-dynamic-value="Sophie.B avatar"
                    class="inline-flex shadow-box-avatar rounded-full justify-center items-center overflow-hidden shadow-lg w-[36px] h-[36px]"
                  >
                    <img
                      alt="Sophie.B avatar"
                      class="object-cover shadow-lg w-[36px] h-[36px]"
                      data-nimg="1"
                      decoding="async"
                      height="36"
                      loading="lazy"
                      src="http://localhost/_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=96&q=75"
                      srcset="/_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=48&q=75 1x, /_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=96&q=75 2x"
                      style="color: transparent;"
                      width="36"
                    />
                  </div>
                  <p
                    class="text-tremor-default dark:text-dark-primary min-w-[100px] max-w-[110px] xl:max-w-[124px] truncate text-white text-left ml-4 capitalize false"
                  >
                    Sophie.B
                  </p>
                </div>
              </div>
              <div>
                <svg
                  class="tremor-AccordionHeader-arrowIcon h-5 w-5 -mr-1 text-tremor-content-subtle dark:text-dark-tremor-content-subtle transition-all -rotate-180"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.9999 10.8284L7.0502 15.7782L5.63599 14.364L11.9999 8L18.3639 14.364L16.9497 15.7782L11.9999 10.8284Z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          class="h-px bg-gradient-divider my-4 opacity-25"
        />
        <ul>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/analytics"
            >
              <span
                class="w-5"
              >
                AN
              </span>
              <span
                class="false pl-2"
              >
                Analytics
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/sales"
            >
              <span
                class="w-5"
              >
                S
              </span>
              <span
                class="false pl-2"
              >
                Sales
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center bg-primary hover:!bg-primary !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 "
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/projects"
            >
              <span
                class="w-5"
              >
                AP
              </span>
              <span
                class="false pl-2"
              >
                Projects
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 "
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/users"
            >
              <span
                class="w-5"
              >
                U
              </span>
              <span
                class="false pl-2"
              >
                Users
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/orders"
            >
              <span
                class="w-5"
              >
                O
              </span>
              <span
                class="false pl-2"
              >
                Orders
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/products"
            >
              <span
                class="w-5"
              >
                P
              </span>
              <span
                class="false pl-2"
              >
                Products
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/billing"
            >
              <span
                class="w-5"
              >
                B
              </span>
              <span
                class="false pl-2"
              >
                Billing
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="sidebar antialiased shadow-box-sidebar bg-gradient-primary dark:bg-none dark:bg-dark-gradient-primary w-[250px] rounded-xl z-50 px-4 py-6 overflow-y-auto overflow-x-hidden fixed top-4 left-4 h-[calc(100vh-2rem)] transition-all ease-in translate-x-[-20rem] xl:translate-x-0 xl:w-[260px] delay-10 duration-300"
    >
      <div
        class="tremor-Flex-root flex w-full flex-row justify-end items-center"
      >
        <div
          class="border p-1 rounded-s-md -mr-4 bg-white cursor-pointer"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 256 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </div>
      </div>
      <a
        href="/analytics"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row items-center justify-normal pl-5 gap-1 pb-2 flex-nowrap relative"
        >
          <img
            alt="Tremor Dashboard PRO"
            data-nimg="1"
            decoding="async"
            height="28"
            loading="lazy"
            src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=64&q=75"
            srcset="/_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=64&q=75 2x"
            style="color: transparent;"
            width="28"
          />
          <h1
            class="text-white text-tremor-default font-semibold flex flex-nowrap false delay-300 duration-500"
          >
            Tremor Dashboard PRO
          </h1>
        </div>
      </a>
      <div
        class="h-px bg-gradient-divider my-4 opacity-25"
      />
      <div
        class="tremor-AccordionList-root rounded-tremor-default shadow-tremor-card dark:shadow-dark-tremor-card bg-transparent shadow-none border-0"
      >
        <div
          class="tremor-Accordion-root overflow-hidden border-tremor-border dark:border-dark-tremor-border rounded-t-tremor-default bg-inherit dark:bg-none dark:bg-dark-gradient-primary border-0 rounded-md"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            class="tremor-AccordionHeader-root w-full flex items-center justify-between px-4 dark:text-dark-tremor-content-emphasis min-w-[210px] text-white py-2 false"
            data-headlessui-state=""
            data-testid="openAccordionBody"
            id="headlessui-disclosure-button-:r0:"
            type="button"
          >
            <div
              class="tremor-AccordionHeader-children flex flex-1 text-inherit mr-4"
            >
              <div
                class="tremor-Flex-root flex w-full flex-row justify-start items-center"
              >
                <div
                  after-dynamic-value="Sophie.B avatar"
                  class="inline-flex shadow-box-avatar rounded-full justify-center items-center overflow-hidden shadow-lg w-[36px] h-[36px]"
                >
                  <img
                    alt="Sophie.B avatar"
                    class="object-cover shadow-lg w-[36px] h-[36px]"
                    data-nimg="1"
                    decoding="async"
                    height="36"
                    loading="lazy"
                    src="http://localhost/_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=96&q=75"
                    srcset="/_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=48&q=75 1x, /_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=96&q=75 2x"
                    style="color: transparent;"
                    width="36"
                  />
                </div>
                <p
                  class="text-tremor-default dark:text-dark-primary min-w-[100px] max-w-[110px] xl:max-w-[124px] truncate text-white text-left ml-4 capitalize false"
                >
                  Sophie.B
                </p>
              </div>
            </div>
            <div>
              <svg
                class="tremor-AccordionHeader-arrowIcon h-5 w-5 -mr-1 text-tremor-content-subtle dark:text-dark-tremor-content-subtle transition-all -rotate-180"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 10.8284L7.0502 15.7782L5.63599 14.364L11.9999 8L18.3639 14.364L16.9497 15.7782L11.9999 10.8284Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        class="h-px bg-gradient-divider my-4 opacity-25"
      />
      <ul>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/analytics"
          >
            <span
              class="w-5"
            >
              AN
            </span>
            <span
              class="false pl-2"
            >
              Analytics
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/sales"
          >
            <span
              class="w-5"
            >
              S
            </span>
            <span
              class="false pl-2"
            >
              Sales
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center bg-primary hover:!bg-primary !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 "
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/projects"
          >
            <span
              class="w-5"
            >
              AP
            </span>
            <span
              class="false pl-2"
            >
              Projects
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 "
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/users"
          >
            <span
              class="w-5"
            >
              U
            </span>
            <span
              class="false pl-2"
            >
              Users
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/orders"
          >
            <span
              class="w-5"
            >
              O
            </span>
            <span
              class="false pl-2"
            >
              Orders
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/products"
          >
            <span
              class="w-5"
            >
              P
            </span>
            <span
              class="false pl-2"
            >
              Products
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/billing"
          >
            <span
              class="w-5"
            >
              B
            </span>
            <span
              class="false pl-2"
            >
              Billing
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Sidebar component Should render labels when click user button 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="sidebar antialiased shadow-box-sidebar bg-gradient-primary dark:bg-none dark:bg-dark-gradient-primary w-[250px] rounded-xl z-50 px-4 py-6 overflow-y-auto overflow-x-hidden fixed top-4 left-4 h-[calc(100vh-2rem)] transition-all ease-in translate-x-[-20rem] xl:translate-x-0 xl:w-[260px] delay-10 duration-300"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row justify-end items-center"
        >
          <div
            class="border p-1 rounded-s-md -mr-4 bg-white cursor-pointer"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 256 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </div>
        </div>
        <a
          href="/analytics"
        >
          <div
            class="tremor-Flex-root flex w-full flex-row items-center justify-normal pl-5 gap-1 pb-2 flex-nowrap relative"
          >
            <img
              alt="Tremor Dashboard PRO"
              data-nimg="1"
              decoding="async"
              height="28"
              loading="lazy"
              src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=64&q=75"
              srcset="/_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=64&q=75 2x"
              style="color: transparent;"
              width="28"
            />
            <h1
              class="text-white text-tremor-default font-semibold flex flex-nowrap false delay-300 duration-500"
            >
              Tremor Dashboard PRO
            </h1>
          </div>
        </a>
        <div
          class="h-px bg-gradient-divider my-4 opacity-25"
        />
        <div
          class="tremor-AccordionList-root rounded-tremor-default shadow-tremor-card dark:shadow-dark-tremor-card bg-transparent shadow-none border-0"
        >
          <div
            class="tremor-Accordion-root overflow-hidden border-tremor-border dark:border-dark-tremor-border rounded-t-tremor-default bg-inherit dark:bg-none dark:bg-dark-gradient-primary border-0 rounded-md"
            data-headlessui-state="open"
          >
            <button
              aria-controls="headlessui-disclosure-panel-:rb:"
              aria-expanded="true"
              class="tremor-AccordionHeader-root w-full flex items-center justify-between px-4 dark:text-dark-tremor-content-emphasis min-w-[210px] text-white py-2 false"
              data-headlessui-state="open"
              data-testid="openAccordionBody"
              id="headlessui-disclosure-button-:ra:"
              type="button"
            >
              <div
                class="tremor-AccordionHeader-children flex flex-1 text-inherit mr-4"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-start items-center"
                >
                  <div
                    after-dynamic-value="Sophie.B avatar"
                    class="inline-flex shadow-box-avatar rounded-full justify-center items-center overflow-hidden shadow-lg w-[36px] h-[36px]"
                  >
                    <img
                      alt="Sophie.B avatar"
                      class="object-cover shadow-lg w-[36px] h-[36px]"
                      data-nimg="1"
                      decoding="async"
                      height="36"
                      loading="lazy"
                      src="http://localhost/_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=96&q=75"
                      srcset="/_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=48&q=75 1x, /_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=96&q=75 2x"
                      style="color: transparent;"
                      width="36"
                    />
                  </div>
                  <p
                    class="text-tremor-default dark:text-dark-primary min-w-[100px] max-w-[110px] xl:max-w-[124px] truncate text-white text-left ml-4 capitalize false"
                  >
                    Sophie.B
                  </p>
                </div>
              </div>
              <div>
                <svg
                  class="tremor-AccordionHeader-arrowIcon h-5 w-5 -mr-1 text-tremor-content-subtle dark:text-dark-tremor-content-subtle transition-all"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.9999 10.8284L7.0502 15.7782L5.63599 14.364L11.9999 8L18.3639 14.364L16.9497 15.7782L11.9999 10.8284Z"
                  />
                </svg>
              </div>
            </button>
            <div
              class="tremor-AccordionBody-root w-full text-tremor-default px-4 pb-3 text-tremor-content dark:text-dark-tremor-content"
              data-headlessui-state="open"
              id="headlessui-disclosure-panel-:rb:"
            >
              <ul
                class="tremor-List-root w-full divide-y divide-tremor-border text-tremor-content dark:divide-dark-tremor-border dark:text-dark-tremor-content"
              >
                <li
                  class="tremor-ListItem-root w-full flex justify-between items-center text-tremor-default py-2 hover:bg-none !p-0 leading-[26px] mt-1 rounded-md text-centertransition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20"
                >
                  <a
                    class="w-full"
                    href="/profile"
                  >
                    <div
                      class="tremor-Flex-root flex flex-row justify-between items-center w-full gap-6 font-normal py-3 px-7 false"
                    >
                      <span
                        class="w-5 text-center"
                      >
                        M
                      </span>
                      <span
                        class="false w-full text-start"
                      >
                        My Profile
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  class="tremor-ListItem-root w-full flex justify-between items-center text-tremor-default py-2 hover:bg-none !p-0 leading-[26px] mt-1 rounded-md text-centertransition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20"
                >
                  <a
                    class="w-full"
                    href="/settings"
                  >
                    <div
                      class="tremor-Flex-root flex flex-row justify-between items-center w-full gap-6 font-normal py-3 px-7 false"
                    >
                      <span
                        class="w-5 text-center"
                      >
                        S
                      </span>
                      <span
                        class="false w-full text-start"
                      >
                        Settings
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  class="tremor-ListItem-root w-full flex justify-between items-center text-tremor-default py-2 leading-[26px] relative !p-0 mt-1"
                >
                  <div
                    class="tremor-Flex-root flex flex-row justify-between items-center w-full gap-6 font-normal py-3 px-7 false"
                  >
                    <span
                      class="cursor-pointer w-5 text-center"
                    >
                      L
                    </span>
                    <span
                      class="false w-full text-start"
                    >
                      Logout
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="h-px bg-gradient-divider my-4 opacity-25"
        />
        <ul>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/analytics"
            >
              <span
                class="w-5"
              >
                AN
              </span>
              <span
                class="false pl-2"
              >
                Analytics
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/sales"
            >
              <span
                class="w-5"
              >
                S
              </span>
              <span
                class="false pl-2"
              >
                Sales
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center bg-primary hover:!bg-primary !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 "
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/projects"
            >
              <span
                class="w-5"
              >
                AP
              </span>
              <span
                class="false pl-2"
              >
                Projects
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 "
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/users"
            >
              <span
                class="w-5"
              >
                U
              </span>
              <span
                class="false pl-2"
              >
                Users
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/orders"
            >
              <span
                class="w-5"
              >
                O
              </span>
              <span
                class="false pl-2"
              >
                Orders
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/products"
            >
              <span
                class="w-5"
              >
                P
              </span>
              <span
                class="false pl-2"
              >
                Products
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/billing"
            >
              <span
                class="w-5"
              >
                B
              </span>
              <span
                class="false pl-2"
              >
                Billing
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <div>
      <nav
        class="sidebar antialiased shadow-box-sidebar bg-gradient-primary dark:bg-none dark:bg-dark-gradient-primary w-[250px] rounded-xl z-50 px-4 py-6 overflow-y-auto overflow-x-hidden fixed top-4 left-4 h-[calc(100vh-2rem)] transition-all ease-in translate-x-[-20rem] xl:translate-x-0 xl:w-[260px] delay-10 duration-300"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row justify-end items-center"
        >
          <div
            class="border p-1 rounded-s-md -mr-4 bg-white cursor-pointer"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 256 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </div>
        </div>
        <a
          href="/analytics"
        >
          <div
            class="tremor-Flex-root flex w-full flex-row items-center justify-normal pl-5 gap-1 pb-2 flex-nowrap relative"
          >
            <img
              alt="Tremor Dashboard PRO"
              data-nimg="1"
              decoding="async"
              height="28"
              loading="lazy"
              src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=64&q=75"
              srcset="/_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=64&q=75 2x"
              style="color: transparent;"
              width="28"
            />
            <h1
              class="text-white text-tremor-default font-semibold flex flex-nowrap false delay-300 duration-500"
            >
              Tremor Dashboard PRO
            </h1>
          </div>
        </a>
        <div
          class="h-px bg-gradient-divider my-4 opacity-25"
        />
        <div
          class="tremor-AccordionList-root rounded-tremor-default shadow-tremor-card dark:shadow-dark-tremor-card bg-transparent shadow-none border-0"
        >
          <div
            class="tremor-Accordion-root overflow-hidden border-tremor-border dark:border-dark-tremor-border rounded-t-tremor-default bg-inherit dark:bg-none dark:bg-dark-gradient-primary border-0 rounded-md"
            data-headlessui-state=""
          >
            <button
              aria-expanded="false"
              class="tremor-AccordionHeader-root w-full flex items-center justify-between px-4 dark:text-dark-tremor-content-emphasis min-w-[210px] text-white py-2 false"
              data-headlessui-state=""
              data-testid="openAccordionBody"
              id="headlessui-disclosure-button-:rc:"
              type="button"
            >
              <div
                class="tremor-AccordionHeader-children flex flex-1 text-inherit mr-4"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-start items-center"
                >
                  <div
                    after-dynamic-value="Sophie.B avatar"
                    class="inline-flex shadow-box-avatar rounded-full justify-center items-center overflow-hidden shadow-lg w-[36px] h-[36px]"
                  >
                    <img
                      alt="Sophie.B avatar"
                      class="object-cover shadow-lg w-[36px] h-[36px]"
                      data-nimg="1"
                      decoding="async"
                      height="36"
                      loading="lazy"
                      src="http://localhost/_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=96&q=75"
                      srcset="/_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=48&q=75 1x, /_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=96&q=75 2x"
                      style="color: transparent;"
                      width="36"
                    />
                  </div>
                  <p
                    class="text-tremor-default dark:text-dark-primary min-w-[100px] max-w-[110px] xl:max-w-[124px] truncate text-white text-left ml-4 capitalize false"
                  >
                    Sophie.B
                  </p>
                </div>
              </div>
              <div>
                <svg
                  class="tremor-AccordionHeader-arrowIcon h-5 w-5 -mr-1 text-tremor-content-subtle dark:text-dark-tremor-content-subtle transition-all -rotate-180"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.9999 10.8284L7.0502 15.7782L5.63599 14.364L11.9999 8L18.3639 14.364L16.9497 15.7782L11.9999 10.8284Z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          class="h-px bg-gradient-divider my-4 opacity-25"
        />
        <ul>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/analytics"
            >
              <span
                class="w-5"
              >
                AN
              </span>
              <span
                class="false pl-2"
              >
                Analytics
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/sales"
            >
              <span
                class="w-5"
              >
                S
              </span>
              <span
                class="false pl-2"
              >
                Sales
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center bg-primary hover:!bg-primary !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 "
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/projects"
            >
              <span
                class="w-5"
              >
                AP
              </span>
              <span
                class="false pl-2"
              >
                Projects
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 "
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/users"
            >
              <span
                class="w-5"
              >
                U
              </span>
              <span
                class="false pl-2"
              >
                Users
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/orders"
            >
              <span
                class="w-5"
              >
                O
              </span>
              <span
                class="false pl-2"
              >
                Orders
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/products"
            >
              <span
                class="w-5"
              >
                P
              </span>
              <span
                class="false pl-2"
              >
                Products
              </span>
            </a>
          </li>
          <li
            class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
          >
            <a
              class="font-normal w-full py-3 px-7 false"
              href="/billing"
            >
              <span
                class="w-5"
              >
                B
              </span>
              <span
                class="false pl-2"
              >
                Billing
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="sidebar antialiased shadow-box-sidebar bg-gradient-primary dark:bg-none dark:bg-dark-gradient-primary w-[250px] rounded-xl z-50 px-4 py-6 overflow-y-auto overflow-x-hidden fixed top-4 left-4 h-[calc(100vh-2rem)] transition-all ease-in translate-x-[-20rem] xl:translate-x-0 xl:w-[260px] delay-10 duration-300"
    >
      <div
        class="tremor-Flex-root flex w-full flex-row justify-end items-center"
      >
        <div
          class="border p-1 rounded-s-md -mr-4 bg-white cursor-pointer"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 256 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </div>
      </div>
      <a
        href="/analytics"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row items-center justify-normal pl-5 gap-1 pb-2 flex-nowrap relative"
        >
          <img
            alt="Tremor Dashboard PRO"
            data-nimg="1"
            decoding="async"
            height="28"
            loading="lazy"
            src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=64&q=75"
            srcset="/_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fsidebar-logo.webp&w=64&q=75 2x"
            style="color: transparent;"
            width="28"
          />
          <h1
            class="text-white text-tremor-default font-semibold flex flex-nowrap false delay-300 duration-500"
          >
            Tremor Dashboard PRO
          </h1>
        </div>
      </a>
      <div
        class="h-px bg-gradient-divider my-4 opacity-25"
      />
      <div
        class="tremor-AccordionList-root rounded-tremor-default shadow-tremor-card dark:shadow-dark-tremor-card bg-transparent shadow-none border-0"
      >
        <div
          class="tremor-Accordion-root overflow-hidden border-tremor-border dark:border-dark-tremor-border rounded-t-tremor-default bg-inherit dark:bg-none dark:bg-dark-gradient-primary border-0 rounded-md"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            class="tremor-AccordionHeader-root w-full flex items-center justify-between px-4 dark:text-dark-tremor-content-emphasis min-w-[210px] text-white py-2 false"
            data-headlessui-state=""
            data-testid="openAccordionBody"
            id="headlessui-disclosure-button-:rc:"
            type="button"
          >
            <div
              class="tremor-AccordionHeader-children flex flex-1 text-inherit mr-4"
            >
              <div
                class="tremor-Flex-root flex w-full flex-row justify-start items-center"
              >
                <div
                  after-dynamic-value="Sophie.B avatar"
                  class="inline-flex shadow-box-avatar rounded-full justify-center items-center overflow-hidden shadow-lg w-[36px] h-[36px]"
                >
                  <img
                    alt="Sophie.B avatar"
                    class="object-cover shadow-lg w-[36px] h-[36px]"
                    data-nimg="1"
                    decoding="async"
                    height="36"
                    loading="lazy"
                    src="http://localhost/_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=96&q=75"
                    srcset="/_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=48&q=75 1x, /_next/image?url=%2Fimages%2Favatar%2Favatar-md.webp&w=96&q=75 2x"
                    style="color: transparent;"
                    width="36"
                  />
                </div>
                <p
                  class="text-tremor-default dark:text-dark-primary min-w-[100px] max-w-[110px] xl:max-w-[124px] truncate text-white text-left ml-4 capitalize false"
                >
                  Sophie.B
                </p>
              </div>
            </div>
            <div>
              <svg
                class="tremor-AccordionHeader-arrowIcon h-5 w-5 -mr-1 text-tremor-content-subtle dark:text-dark-tremor-content-subtle transition-all -rotate-180"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 10.8284L7.0502 15.7782L5.63599 14.364L11.9999 8L18.3639 14.364L16.9497 15.7782L11.9999 10.8284Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        class="h-px bg-gradient-divider my-4 opacity-25"
      />
      <ul>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/analytics"
          >
            <span
              class="w-5"
            >
              AN
            </span>
            <span
              class="false pl-2"
            >
              Analytics
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/sales"
          >
            <span
              class="w-5"
            >
              S
            </span>
            <span
              class="false pl-2"
            >
              Sales
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center bg-primary hover:!bg-primary !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 "
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/projects"
          >
            <span
              class="w-5"
            >
              AP
            </span>
            <span
              class="false pl-2"
            >
              Projects
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 "
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/users"
          >
            <span
              class="w-5"
            >
              U
            </span>
            <span
              class="false pl-2"
            >
              Users
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/orders"
          >
            <span
              class="w-5"
            >
              O
            </span>
            <span
              class="false pl-2"
            >
              Orders
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/products"
          >
            <span
              class="w-5"
            >
              P
            </span>
            <span
              class="false pl-2"
            >
              Products
            </span>
          </a>
        </li>
        <li
          class="tremor-ListItem-root w-full flex justify-between items-center truncate text-tremor-default !p-0 leading-[26px] rounded-md my-[3px] text-center hover:bg-none !p-0 leading-[26px] mt-1 rounded-md transition-[background-color] duration-300 ease-[cubic-bezier(0.4,0,0.6,1)] delay-20 false"
        >
          <a
            class="font-normal w-full py-3 px-7 false"
            href="/billing"
          >
            <span
              class="w-5"
            >
              B
            </span>
            <span
              class="false pl-2"
            >
              Billing
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
